#==============================================================================#
#                                                                              #
#                       MACVETH CMake Configuration Test                       #
#                                                                              #
#==============================================================================#

# TODO: Include unit test
# add_subdirectory(unittests)

# Include integration test
add_subdirectory(integrationtests)

# TODO: Include benchmarks
# add_subdirectory(perftest)